
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct in_addr {int dummy; } ;
struct sockaddr_in {int sin_zero; struct in_addr sin_addr; int sin_port; int sin_family; } ;
struct sockaddr {int dummy; } ;
struct hostent {scalar_t__ h_addr; } ;


 int AF_INET ;
 int FAD ;
 struct hostent* GET_HOST_NM_ERR ;
 int NRL ;
 int SIN_ZR_SIZE ;
 int SOCK_STREAM ;
 int bzero (int *,int ) ;
 int connect (int,struct sockaddr*,int) ;
 struct hostent* gethostbyname (char*) ;
 int htons (int) ;
 int socket (int ,int ,int ) ;

int setsock(char *u_host,int u_port)
{
        int sock;
        struct hostent *sxp;
        struct sockaddr_in sxp_addr;

        if((sxp=gethostbyname(u_host))==(GET_HOST_NM_ERR))
        {
                return(FAD);
        }
        if((sock=socket(AF_INET,SOCK_STREAM,(NRL)))==(FAD))
        {
                return(FAD);
        }
        sxp_addr.sin_family=AF_INET;
        sxp_addr.sin_port=htons(u_port);
        sxp_addr.sin_addr=*((struct in_addr*)sxp->h_addr);
        bzero(&(sxp_addr.sin_zero),(SIN_ZR_SIZE));

        if(connect(sock,(struct sockaddr *)&sxp_addr,sizeof(struct sockaddr))==(FAD))
        {
                return(FAD);
        }
        return(sock);
}
